--- a/templates/teacher_submissions.html
+++ b/templates/teacher_submissions.html
@@ -29,6 +29,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('teacher_modules') }}">
+                        <i class="bi bi-diagram-3 me-1"></i>Modules
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('teacher_messages') }}">
                         <i class="bi bi-chat-dots me-1"></i>Messages
                     </a>
