--- a/templates/python_lab_teacher.html
+++ b/templates/python_lab_teacher.html
@@ -3,30 +3,8 @@
 {% block title %}Python Lab - Teacher Portal{% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark teacher-nav">
-    <div class="container">
-        <a class="navbar-brand" href="{{ url_for('teacher_dashboard') }}">
-            <i class="bi bi-mortarboard-fill me-2"></i>Teacher Portal
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('teacher_dashboard') }}"><i class="bi bi-speedometer2 me-1"></i>Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('teacher_assignments') }}"><i class="bi bi-journal-text me-1"></i>Assignments</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('teacher_submissions') }}"><i class="bi bi-inbox me-1"></i>Submissions</a></li>
-                {% if teacher_has_module_access %}
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('teacher_modules') }}"><i class="bi bi-diagram-3 me-1"></i>Modules</a></li>
-                {% endif %}
-                <li class="nav-item"><a class="nav-link active" href="{{ url_for('teacher_python_lab') }}"><i class="bi bi-code-slash me-1"></i>Python Lab</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('teacher_messages') }}"><i class="bi bi-chat-dots me-1"></i>Messages</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('teacher_settings') }}"><i class="bi bi-gear me-1"></i>Settings</a></li>
-            </ul>
-            <span class="navbar-text"><i class="bi bi-person-workspace me-1"></i>{{ session.teacher_name }}</span>
-        </div>
-    </div>
-</nav>
+{% set active_nav = 'learning_tools' %}
+{% include 'partials/teacher_navbar.html' %}
 {% endblock %}
 
 {% block content %}
