--- a/templates/teacher_chat.html
+++ b/templates/teacher_chat.html
@@ -3,18 +3,8 @@
 {% block title %}Chat with {{ student.name }} - Teacher Portal{% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark teacher-nav">
-    <div class="container">
-        <a class="navbar-brand" href="{{ url_for('teacher_dashboard') }}">
-            <i class="bi bi-mortarboard-fill me-2"></i>Teacher Portal
-        </a>
-        <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="{{ url_for('teacher_logout') }}">
-                <i class="bi bi-box-arrow-right me-1"></i>Logout
-            </a>
-        </div>
-    </div>
-</nav>
+{% set active_nav = 'messages' %}
+{% include 'partials/teacher_navbar.html' %}
 {% endblock %}
 
 {% block content %}
