--- a/templates/teacher_review_rubric.html
+++ b/templates/teacher_review_rubric.html
@@ -3,18 +3,8 @@
 {% block title %}Review Essay Submission - Teacher Portal{% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark teacher-nav">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('teacher_dashboard') }}">
-            <i class="bi bi-mortarboard-fill me-2"></i>Teacher Portal
-        </a>
-        <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="{{ url_for('teacher_submissions') }}">
-                <i class="bi bi-arrow-left me-1"></i>Back to Submissions
-            </a>
-        </div>
-    </div>
-</nav>
+{% set active_nav = 'submissions' %}
+{% include 'partials/teacher_navbar.html' %}
 {% endblock %}
 
 {% block content %}
